--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@capacitor/android": "^4.7.3",
+    "@capacitor/core": "^4.7.3",
+    "@capacitor/ios": "^4.7.3",
     "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "ant-design-vue": "^3.2.17",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "qrcode": "^1.5.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-barcode-reader": "^1.0.3",
+    "vue-router": "^4.1.6",
+    "vue3-qr-reader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@capacitor/cli": "^4.7.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
